--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "zlatac",
